--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -14,13 +14,13 @@
   </head>
     <body>
         <div class="container">
-            <div class="row justify-content-between">
-                <div class="col-4"></div>
+            <div class="row">
+                <div class="col-4" ></div>
                 <div class="col">
                     <h1>Members</h1>
                     <ul class="list-group">
                         {% for x in mymembers %}
-                        <li class="list-group-item list-group-item-secondary">{{ x.firstname }} {{ x.lastname }}</li>
+                        <li class="list-group-item list-group-item-secondary"><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
