--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -1,31 +1,16 @@
-<!DOCTYPE html>
-<html>
- <head>
-    <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% extends 'master.html' %}
 
-    <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-          crossorigin="anonymous">
-  <title>tennis club</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-4" ></div>
-        <div class="col">
+    {% block title %}
+      My tennis club- list of all members
+    {% endblock %}
+
+    {% block content %}
+
           <h1>Members</h1>
           <ul class="list-group">
             {% for x in mymembers %}
           <li class="list-group-item list-group-item-secondary"><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
             {% endfor %}
           </ul>
-        </div>
-        <div class="col-4"></div>
-      </div>
-    </div>
-  </body>
-</html>
+    
+    {% endblock %}
