--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
-<html>
-  <head>
+    {% extends 'master.html' %}
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block title %}
+    Details about {{ mymember.firstname }} {{ mymember.lastname }}
+    {% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-          rel="stylesheet" 
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-          crossorigin="anonymous">
-  <title>tennis club</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row ">
-        <div class="col-4"></div>
-        <div class="col">
+    {% block content %}
+    
           <h1>{{ mymember.firstname }} {{mymember.lastname}}</h1>
           <p>Phone: {{ mymember.phone }}</p>
           <p>Since: {{ mymember.joined_data }}</p>
           <p>Back to <a href="/members">Members</a></p>
-        </div>
-        <div class="col-4"></div>
-      </div>
-    </div>
-  </body>
-</html>
+    
+    {% endblock %}
+  
