add main index page

--- a/members/templates/master.html
+++ b/members/templates/master.html
@@ -10,7 +10,7 @@
           crossorigin="anonymous">
 </head>
 <body>
-    <h1 style="text-align:left;"> Tennis club</h1>
+    <h1 style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
     <div class="container">
       <div class="row">
         <div class="col-4" ></div>
@@ -21,5 +21,6 @@
         <div class="col-4" ></div>
       </div>
     </div>
+<script src="https://kit.fontawesome.com/f0a68ae9ef.js" crossorigin="anonymous"></script>
 </body>
 </html>
