--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -6,6 +6,7 @@
 
     {% block content %}
 
+          <p><a href="/">Home</a></p>
           <h1>Members</h1>
           <ul class="list-group">
             {% for x in mymembers %}
