--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -36,7 +36,7 @@
           <p>this paragraph will be commended and no visable</p>
           {% endcomment %}
         </div>
-
+        {% include 'footer.html' %}
       </div>
     </body>
 </html>
