--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -1,42 +1,22 @@
-<!DOCTYPE html>
-<html>
-    <body>
-      <div style="text-align: center;">
-
-        <ul style="list-style: none;">
-          {% for x in mymembers %}
-          <li>
-            {{ x.firstname }} {{ x.lastname }}
-          </li>
+{% extends 'master.html' %}
+{% block content %}
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Firstname</th>
+            <td>Lastname</td>
+          </tr>
+        </thead>
+        {% for x in mymembers %}
+        <tbody>
+          <tr>
+            <td>{{ x.id }}</td>
+            <td>{{ x.firstname }}</td>
+            <td>{{ x.lastname }}</td>
+          </tr>
           {% endfor %}
-        </ul>
-        
-        <div>
-          
-          {% with greeting=3 %}
-          {% if greeting == 1 %}
-          <p style="color: red;">greeting is one</p>
-          {% elif greeting == 2 %}
-          <p style="color: red;">greeting is two</p>
-          {% else %}
-          <p style="color: red;">greeting is... who knows?</p>
-          {% endif %}
-          {% endwith %}
-
-        </div>
-
-        <div>
-          {% for x in mymembers reversed %}
-          <h1>{{ x.id }}</h1>
-          <p>{{ x.lastname }} tel: {# this a comment in a code #}{{ x.phone }}</p>
-          {% empty %}
-          <p>No members</p>
-          {% endfor %}
-          {% comment 'this is a comment to comment' %}
-          <p>this paragraph will be commended and no visable</p>
-          {% endcomment %}
-        </div>
-        {% include 'footer.html' %}
-      </div>
-    </body>
-</html>
+        </tbody>
+      </table>
+      {% include 'footer.html' %}
+{% endblock %}
