--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -25,5 +25,9 @@
       {{ first_names }}
 <h2>Filter by specific name</h2>
       {{ filtered_name }}
+<h2>Filter by names with OR</h2>
+      {{ filter_with_or }}
+<h2>Filter first letter is 'J'</h2>
+      {{ firstletter }}
       {% include 'footer.html' %}
 {% endblock %}
