queryset order by

--- a/members/templates/template.html
+++ b/members/templates/template.html
@@ -29,5 +29,9 @@
       {{ filter_with_or }}
 <h2>Filter first letter is 'J'</h2>
       {{ firstletter }}
+<h2>Members ordered by alphabet</h2>
+      {{ orderby }}
+<h2>Members ordered by alphabet desc</h2>
+      {{ orderby_desc }}
       {% include 'footer.html' %}
 {% endblock %}
