add static files

--- a/members/templates/master.html
+++ b/members/templates/master.html
@@ -8,6 +8,7 @@
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'main.css' %}">
 </head>
 <body>
     <h1 style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
