--- a/members/templates/master.html
+++ b/members/templates/master.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +9,7 @@
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
-    <link rel="stylesheet" href='main.css'>
+    <link rel="stylesheet" href='{% static "main.css"%}'>
 </head>
 <body>
     <h1 style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
