add styles to the project

--- a/members/templates/main.html
+++ b/members/templates/main.html
@@ -5,8 +5,11 @@ My Tennis club
 {% endblock %}
 
 {% block content %}
-<h1>My Tennis Club</h1>
-<h3>Members</h3>
-<p>Checkout all our <a href="members/" 
-                       aria-label="list of members">members</a></p>
+<div class="main">
+    <h1>My Tennis Club</h1>
+
+    <h3>Members</h3>
+  
+    <p>Check out all our <a href="members/">members</a></p>
+  </div>
 {% endblock %}
