--- a/members/templates/master.html
+++ b/members/templates/master.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +9,14 @@
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
-    <link rel="stylesheet" href='{% static "main.css"%}'>
+    <link rel="stylesheet" href='{% static "global.css"%}'>
 </head>
 <body>
     <h1 style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
+    <div class="topnav">
+      <a href="/">HOME</a> |
+      <a href="/members">MEMBERS</a>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-4" ></div>
