--- a/members/templates/all_members.html
+++ b/members/templates/all_members.html
@@ -6,12 +6,13 @@
 
     {% block content %}
 
-          <p><a href="/">Home</a></p>
-          <h1>Members</h1>
-          <ul class="list-group">
-            {% for x in mymembers %}
-          <li class="list-group-item list-group-item-secondary"><a href="details/{{ x.id }}">{{ x.firstname }} {{ x.lastname }}</a></li>
-            {% endfor %}
-          </ul>
+         <div class="mycard">
+    <h1>Members</h1>
+    <ul>
+      {% for x in mymembers %}
+        <li onclick="window.location = 'details/{{ x.id }}'">{{ x.firstname }} {{ x.lastname }}</li>
+      {% endfor %}
+    </ul>
+  </div>
     
     {% endblock %}
