--- a/members/templates/details.html
+++ b/members/templates/details.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
     {% extends 'master.html' %}
 
     {% block title %}
@@ -7,10 +6,11 @@
 
     {% block content %}
     
-          <h1>{{ mymember.firstname }} {{mymember.lastname}}</h1>
-          <p>Phone: {{ mymember.phone }}</p>
-          <p>Since: {{ mymember.joined_data }}</p>
-          <p>Back to <a href="/members">Members</a></p>
+      <div class="mycard">
+        <h1>{{ mymember.firstname }} {{ mymember.lastname }}</h1>
+        <p>Phone {{ mymember.phone }}</p>
+        <p>Member since: {{ mymember.joined_date }}</p>
+      </div>
     
     {% endblock %}
   
