--- a/members/templates/master.html
+++ b/members/templates/master.html
@@ -5,17 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
           rel="stylesheet" 
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
           crossorigin="anonymous">
-    <link rel="stylesheet" href='{% static "global.css"%}'>
+    <link rel="stylesheet" href='{% static "global.css"%}'> -->
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
-    <h1 style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
-    <div class="topnav">
-      <a href="/">HOME</a> |
-      <a href="/members">MEMBERS</a>
+    <h1  style="text-align:left;"> Tennis club <i class="fa-solid fa-medal" style="color: #76c733;"></i></h1>
+    <div class="container">
+      <ul class="nav bg-info">
+        <li class="nav-item">
+          <a class="nav-link link-light" href="/">HOME</> 
+        </li>
+        <li class="nav-item">
+          <a class="nav-link link-light" href="/members">MEMBERS</a>
+        </li>
+      
+      </ul>
     </div>
     <div class="container">
       <div class="row">
